<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.karim.scorekeeper.MainActivity">

    <LinearLayout
        style="@style/match_parent"
        android:orientation="vertical">

        <LinearLayout
            style="@style/match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/first_team"
                style="@style/weight_style">

                <TextView
                    android:id="@+id/team_a_title"
                    style="@style/title_style"
                    android:text="@string/teama_title"/>

                <TextView
                    android:id="@+id/team_a_score"
                    style="@style/score_style"
                    android:text="@string/default_score"/>

                <Button
                    android:id="@+id/add_6points_teamA"
                    style="@style/button_score_style"
                    android:text="@string/add_6points"/>

                <Button
                    android:id="@+id/add_3points_teamA"
                    style="@style/button_score_style"
                    android:text="@string/add_3points"/>

                <Button
                    android:id="@+id/add_2points_teamA"
                    style="@style/button_score_style"
                    android:text="@string/add_2points"/>

                <Button
                    android:id="@+id/add_1point_teamA"
                    style="@style/button_score_style"
                    android:text="@string/add_1point"/>

            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:background="@color/score_color">
            </View>

            <LinearLayout
                android:id="@+id/second_team"
                style="@style/weight_style">

                <TextView
                    android:id="@+id/team_b_title"
                    style="@style/title_style"
                    android:text="@string/teamb_title" />

                <TextView
                    android:id="@+id/team_b_score"
                    style="@style/score_style"
                    android:text="@string/default_score"/>

                <Button
                    android:id="@+id/add_6points_teamB"
                    style="@style/button_score_style"
                    android:text="@string/add_6points" />

                <Button
                    android:id="@+id/add_3points_teamB"
                    style="@style/button_score_style"
                    android:text="@string/add_3points"/>

                <Button
                    android:id="@+id/add_2points_teamB"
                    style="@style/button_score_style"
                    android:text="@string/add_2points"/>

                <Button
                    android:id="@+id/add_1point_teamB"
                    style="@style/button_score_style"
                    android:text="@string/add_1point"/>

            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            style="@style/match_parent">

            <Button
                android:id="@+id/reset_button"
                style="@style/button_reset_style"
                android:text="@string/reset_button"/>

        </RelativeLayout>
    </LinearLayout>

</ScrollView>
